# Data-Science-Practice

AlefTechniTechnicalAssessmentForDataSciencePositionProject/: pyproject.toml
AlefTechniTechnicalAssessmentForDataSciencePositionProject/Assignment/: Solution.py  utils.py
AlefTechniTechnicalAssessmentForDataSciencePositionProject/assignements/: Sol.py
ChatBot/: Rule_Based_ChatBot.py
Detecting Spam in Emails/: Detecting_Spam _n_Emails.py  Spam_detection_t1.py  spam_mail_detection.py
Loan_Approval_Prediction/: loan_aproval_ml_module.py
Machine-Learning-Implementations/: Naive-Base-IMPL.py  PCA_Example.py
Model_Evaluation/: Metrics.py
Regular Expresion/: connected_string_split.py
Student Mental Health Analysis/: Deep Learning Tutorial for Beginners.py  Student_Mental_Health_Analysis.py
TwitterSentimentAnalysis/: TwitterSentimentAnalysis_NLP_Use-Case.py  alef.ipynb  farsa.py  stopword_removal.py  tokenization.py
Visualization/: Gold_Vis.py
pre-processing/: CountVector_EX.py  N-Gram_Ex.py  TFIDF-BOW-diff.py  TF_IDF_EX.py  pandas_examples.py
pythonProject/: 1.py  2.py  3.py  4.py  5_ConvolutionTest.py  5_test.py  6_Dogs_Cats.py  CNN_week2.py  Classy.py  FizzBizz.py  HelloWorld.py  HumanOrHurseDropout.py  LeetCodeAnagram.py  MaxProfitLEETCODE.py  PalindromeNumbers.py  ReOrderLogsFile.py  ReOrderlogfileLeetCode.py  Tensorflow SaveModel.py  WordEmbedingAndSentiments.py  fibonacciNumber.py  fizzbizz2.py  fizzbizz3.py  forcastingRNN.py  hoursesCNN.py  large_dataset_corpus.py  linearRegression.py  main.py  ml_1.py  primeNumber2.py  pyExample1.py  pythontest.py  (+4 more)
(+25 files in other folders)
